...
            "value" : "Ρωτήστε για τη σελίδα"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Ask About Page"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Preguntar sobre la página"
...
