...
    ZStack {
        Color.green.ignoresSafeArea()

        DaxDialogView(logoPosition: .top) {
            VStack(alignment: .leading, spacing: 24) {
                VStack(alignment: .leading, spacing: 20) {
                    Text(verbatim: "Hi there.")

                    Text(verbatim: "Ready for a better, more private internet?")
                }
            }
        }
        .padding()
...
