...
                PrimaryButton(
                    title: viewModel.primaryButtonTitle,
                    isEnabled: viewModel.isContinueEnabled
                ) {
                    primaryAction?()
                }
                .accessibilityIdentifier("Continue")

                SecondaryButton(title: viewModel.secondaryButtonTitle) {
                    secondaryAction?()
                }
                .accessibilityIdentifier("Skip")
            }
...
