...
                            <constraint firstItem="Ni1-Id-O8s" firstAttribute="trailing" secondItem="Sir-qo-Tef" secondAttribute="trailing" constant="20" id="Wqa-lZ-6bi"/>
                            <constraint firstItem="Ni1-Id-O8s" firstAttribute="trailing" secondItem="yS1-TL-7Xx" secondAttribute="trailing" constant="20" id="X85-gP-KOk"/>
                            <constraint firstItem="Sir-qo-Tef" firstAttribute="leading" secondItem="Ni1-Id-O8s" secondAttribute="leading" constant="20" id="sdC-On-jDS"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Share Feedback" largeTitleDisplayMode="never" id="D8A-B7-Dqu">
                        <barButtonItem key="backBarButtonItem" title="Back" id="m0a-EJ-h27"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="edY-he-cfA">
                            <connections>
                                <action selector="onClosePressed:" destination="xnZ-YI-mV7" id="GUe-Ja-h0c"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                <color key="backgroundColor" red="0.4039215686" green="0.56078431370000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="05S-7A-LKg"/>
                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="340" id="YZg-2T-hYX"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                <state key="normal" title="Submit">
                                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="12"/>
                                                    </userDefinedRuntimeAttribute>
...
