...
    }
}

#Preview {
    VStack {
        StatusIndicatorView(status: .on, text: "On")
        StatusIndicatorView(status: .off, text: "Off")
        StatusIndicatorView(status: .alwaysOn, text: "Always On")
        StatusIndicatorView(status: .on, text: "On", isDotHidden: true)
        StatusIndicatorView(status: .off, text: "Off", isDotHidden: true)
    }
}

...
